--- a/requirements.txt
+++ b/requirements.txt
@@ -1,227 +1,35 @@
-aiofiles==0.6.0
-aiohttp==3.7.3
-aiohttp-socks==0.4.2
-anytree==2.8.0
-apparmor==3.0.1
-appdirs==1.4.4
-application-utility==1.3.2
-apsw==3.34.0.post1
-arandr==0.1.10
-argcomplete==1.12.1
-asn1crypto==1.4.0
-astroid==2.4.2
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs==20.3.0
-AUR==2020.12.15.4.18.39
-Automat==20.2.0
-backcall==0.2.0
-baron==0.8
-bauh==0.9.15
-bcrypt==3.2.0
-Beaker==1.11.0
-beautifulsoup4==4.9.3
-blist==1.3.6
-breezy==3.1.0
-Brlapi==0.8.2
-btrfsutil==5.11
-CacheControl==0.12.6
-cached-property==1.5.2
-cachetools==4.2.1
-cairocffi==1.2.0
-CairoSVG==2.5.2
-cchardet==2.1.7
+astroid==2.5.1
 certifi==2020.12.5
-cffi==1.14.5
-chardet==3.0.4
+chardet==4.0.0
 click==7.1.2
-colorama==0.4.4
-ConfigArgParse==1.2.3
-configobj==5.1.0.dev0
-constantly==15.1.0
-contextlib2==0.6.0.post1
 courlan==0.3.1
-cryptography==3.4.6
-css-parser==1.0.6
 cssselect==1.1.0
-cssselect2==0.4.1
 dateparser==1.0.0
-decorator==4.4.2
-defusedxml==0.7.1
-deluge==2.0.4.dev38
-distlib==0.3.1
-distro==1.5.0
-dnspython==1.16.0
-docker==4.4.4
-docker-compose==1.28.5
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.16
-evdev==1.4.0
-feedparser==5.2.1
-filetype==1.0.7
-future==0.18.2
-GeoIP==1.3.2
-green-recorder==3.2.8
-greenlet==0.4.17
-gufw==21.4.0
-h11==0.12.0
-h2==4.0.0
-hpack==4.0.0
-hsluv==5.0.2
-html-sanitizer==1.9.1
-html2text==2020.1.16
-html5-parser==0.4.9
-html5lib==1.1
+Flask==1.1.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.0.0
 htmldate==0.8.1
-hyperframe==6.0.0
-hyperlink==21.0.0
-idna==2.10
-ifaddr==0.1.7
-importlib-metadata==3.7.2
-incremental==17.5.0
-ipython==7.21.0
-ipython-genutils==0.2.0
 isort==5.7.0
-jedi==0.18.0
-jsonschema==3.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
 jusText==2.2.0
-lazy-object-proxy==1.4.3
-lensfun==0.3.95
-LibAppArmor==3.0.1
-libfdt==1.6.0
-libvirt-python==6.4.0
-lit==0.11.1.dev0
-Logbook==1.5.3
-louis==3.17.0
-lutris==0.5.8.3
+lazy-object-proxy==1.5.2
 lxml==4.6.2
-Mako==1.1.4
-mallard-ducktype==1.0.2
-Markdown==3.3.4
 MarkupSafe==1.1.1
-matrix-nio==0.17.0
 mccabe==0.6.1
-mechanize==0.4.5
-meld==3.20.3
-MemoizeDB==2017.3.30.23.38.49
-meson==0.57.1
-mistune==0.8.4
-msgpack==1.0.2
-multidict==5.1.0
-namcap==3.2.10
-neovim==0.3.1
-neovim-remote==2.4.0
-netifaces==0.10.9
-netsnmp-python==1.0a1
-nftables==0.1
-npyscreen==4.10.5
-numpy==1.20.1
-ordered-set==4.0.2
-packaging==20.9
-pacman-mirrors==4.19.5
-paramiko==2.7.2
-parso==0.8.1
-patiencediff==0.2.1
-pbget==2020.12.15.4.7.21
-peewee==3.14.3
-pep517==0.9.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.1.0
-ply==3.11
-plyer==2.0.0
-pm2ml==2017.12.31.5.7.19
-progress==1.5
-prompt-toolkit==3.0.17
-psutil==5.8.0
-ptyprocess==0.7.0
-pwquality==1.4.4
-py7zr==0.11.3
-pyalpm==0.9.2
-pyaml==20.4.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.20.0
-pychm==0.8.6
-pycparser==2.20
-pycryptodome==3.10.1
-pydbus==0.6.0
-pyelftools==0.27
-pygame==2.0.1
-Pygments==2.8.1
-PyGObject==3.38.0
-PyHamcrest==1.9.0
-pylint==2.6.0
-pymediainfo==5.0.3
-PyNaCl==1.4.0
-pynvim==0.4.2
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-PyQt5==5.15.4
-PyQt5-sip==12.8.1
-PyQtWebEngine==5.15.4
-pyrsistent==0.17.3
-pysmbc==1.0.23
-pyte==0.8.0
+psycopg2==2.8.6
+pylint==2.7.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
-python-libtorrent==1.2.11
-python-olm==3.2.2
-python-xapp==2.0.2
-python-xlib==0.29
 pytz==2021.1
-pyxdg==0.26
-PyYAML==5.4.1
-ranger-fm==1.9.3
 readability-lxml==0.8.1
-redbaron==0.9.2
-regex==2020.11.13
-rencode==1.0.6
-reportlab==3.5.65
-requests==2.25.1
-resolvelib==0.5.4
-retrying==1.3.3
-rofimoji==5.0.0
-rply==0.7.8
-service-identity==18.1.0
-setproctitle==1.2.2
+regex==2021.3.17
 six==1.15.0
-slip==0.6.5
-slip.dbus==0.6.5
-sortedcontainers==2.3.0
-soupsieve==2.2
-speedtest-cli==2.1.2
-team==1.0
-termcolor==1.1.0
-texttable==1.6.3
-thefuck==3.30
-tinycss2==1.1.0
+SQLAlchemy==1.4.1
 tld==0.12.5
-tldr==1.2.0
 toml==0.10.2
 trafilatura==0.8.1
-traitlets==5.0.5
-Twisted==20.3.0
-typing-extensions==3.7.4.3
 tzlocal==2.1
-ueberzug==18.1.9
-ufw==0.36
-unpaddedbase64==1.1.0
-unrardll==0.1.4
-urllib3==1.26.3
-urwid==2.1.1
-validate==5.1.0.dev0
-watchgod==0.6
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.58.0
-xcffib==0.11.1
-XCGF==2017.3.10.23.45.54
-XCPF==2019.11.18.23.47.4
-yarl==1.6.3
-youtube-dl==2021.3.14
-zeroconf==0.28.8
-zipp==3.4.1
-zope.interface==5.2.0
+urllib3==1.26.4
+Werkzeug==1.0.1
+wrapt==1.12.1
