--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ aiofiles==0.6.0
 aiohttp==3.7.4.post0
 aiohttp-socks==0.4.2
 anytree==2.8.0
+apparmor==3.0.1
 appdirs==1.4.4
+application-utility==1.3.2
+apsw==3.35.4.post1
 arandr==0.1.10
 argcomplete==1.12.1
 asn1crypto==1.4.0
